--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700"
           rel="stylesheet">
-    <title>Burguer Builder</title>
+    <title>Generador de Hamburguesas</title>
 </head>
 <body>
 <noscript>
